jwt auth and swagger implementation added
