# api/controllers/UserController.go
@@ -1,170 +1,0 @@
-package controllers
-
-import (
-	"GOLANG/api/models"
-	"GOLANG/config"
-	format_errors "GOLANG/internal/format-errors"
-	"GOLANG/internal/validations"
-	"net/http"
-	"os"
-	"time"
-
-	"github.com/gin-gonic/gin"
-	"github.com/go-playground/validator/v10"
-	"github.com/golang-jwt/jwt/v5"
-	"golang.org/x/crypto/bcrypt"
-)
-
-// @Tags users
-// @Summary SignUp for users
-// @Schemes
-// @Accept json
-// @Produce json
-// @Success 200 {object} models.userSignUp
-// @Router /users/signup [post]
-func Signup(c *gin.Context) {
-	// Get the name, email and password from request
-	var userInput struct {
-		Name     string `json:"name" binding:"required,min=2,max=50"`
-		Email    string `json:"email" binding:"required,email"`
-		Password string `json:"password" binding:"required,min=6"`
-	}
-
-	if err := c.ShouldBindJSON(&userInput); err != nil {
-		if errs, ok := err.(validator.ValidationErrors); ok {
-			c.JSON(http.StatusUnprocessableEntity, gin.H{
-				"validations": validations.FormatValidationErrors(errs),
-			})
-			return
-		}
-
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	// Email unique validation
-	if validations.IsUniqueValue("users", "email", userInput.Email) {
-		c.JSON(http.StatusUnprocessableEntity, gin.H{
-			"validations": map[string]interface{}{
-				"Email": "The email is already exist!",
-			},
-		})
-		return
-	}
-
-	// Hash the password
-	hashPassword, err := bcrypt.GenerateFromPassword([]byte(userInput.Password), 10)
-
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "Failed to hash password",
-		})
-
-		return
-	}
-
-	user := models.User{
-		Name:     userInput.Name,
-		Email:    userInput.Email,
-		Password: string(hashPassword),
-	}
-
-	// Create the user
-	result := config.DB.Create(&user)
-
-	if result.Error != nil {
-		format_errors.InternalServerError(c)
-		return
-	}
-
-	// Return the user
-	//user.Password = ""
-
-	c.JSON(http.StatusOK, gin.H{
-		"user": user,
-	})
-}
-
-// @Tags users
-// @Summary Login for users
-// @Schemes
-// @Accept json
-// @Produce json
-// @Success 200 {string} Helloworld
-// @Router /users/login [post]
-func Login(c *gin.Context) {
-	// Get the email and password from the request
-	var userInput struct {
-		Email    string `json:"email" binding:"required,email"`
-		Password string `json:"password" binding:"required"`
-	}
-
-	if c.ShouldBindJSON(&userInput) != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Failed to read body",
-		})
-
-		return
-	}
-
-	// Find the user by email
-	var user models.User
-	config.DB.First(&user, "email = ?", userInput.Email)
-
-	if user.ID == 0 {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Invalid email or password",
-		})
-
-		return
-	}
-
-	// Compare the password with user hashed password
-	err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(userInput.Password))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Invalid email or password",
-		})
-
-		return
-	}
-
-	// Generate a JWT token
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-		"sub": user.ID,
-		"exp": time.Now().Add(time.Hour * 24 * 30).Unix(),
-	})
-
-	// Sign in and get the complete encoded token as a string using the .env secret
-	tokenString, err := token.SignedString([]byte(os.Getenv("SECRET")))
-
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Failed to create token",
-		})
-		return
-	}
-
-	// Set expiry time and send the token back
-	c.SetSameSite(http.SameSiteLaxMode)
-	c.SetCookie("Authorization", tokenString, 3600*24*30, "", "", false, true)
-	c.JSON(http.StatusOK, gin.H{"access": tokenString})
-}
-
-// @Tags users
-// @Summary Logout for users
-// @Schemes
-// @Accept json
-// @Produce json
-// @Success 200 {string} Helloworld
-// @Router /users/logout [post]
-func Logout(c *gin.Context) {
-	// Clear the cookie
-	c.SetCookie("Authorization", "", 0, "", "", false, true)
-
-	c.JSON(http.StatusOK, gin.H{
-		"successMessage": "Logout successful",
-	})
-}
