# api/models/UserModel.go
@@ -1,19 +1,0 @@
-package models
-
-import (
-	"gorm.io/gorm"
-)
-
-type User struct {
-	gorm.Model
-	Name     string
-	Email    string `gorm:"unique"`
-	Password string
-}
-
-type userSignUp struct {
-	ID       int    `json:"id" example:"1"`
-	Name     string `json:"name" binding:"required,min=2,max=50"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=6"`
-}
