# api/models/user.go
@@ -1,0 +1,29 @@
+package models
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        uint   `json:"id" gorm:"primary_key"`
+	Username  string `json:"username" gorm:"unique"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
+type RegisterInput struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+}
+
+type AuthInput struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type TokenResponse struct {
+	Token string `json:"token" binding:"required"`
+}
