# api/router/routes.go
@@ -2,7 +2,7 @@ package router
 
 import (
 	"GOLANG/api/controllers"
-	"GOLANG/api/middleware"
+	"GOLANG/api/middlewares"
 
 	"github.com/gin-gonic/gin"
 )
@@ -11,8 +11,8 @@ func GetRoute(r *gin.Engine) {
 
 	// User Route
 	api_users := r.Group("/api/users")
-	api_users.POST("/signup", controllers.Signup)
-	api_users.POST("/login", controllers.Login)
-	api_users.POST("/logout", middleware.RequireAuth, controllers.Logout)
+	api_users.POST("/register", controllers.Register)
+	api_users.POST("/auth", controllers.Auth)
+	api_users.GET("/me", middlewares.CheckAuth, controllers.GetUserProfile)
 
 }
