# docs/swagger.json
@@ -8,9 +8,9 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "127.0.0.1:8080",
     "paths": {
-        "/users/login": {
+        "/users/auth": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -21,19 +21,35 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Login for users",
+                "summary": "Auth for users",
+                "parameters": [
+                    {
+                        "description": "User Auth",
+                        "name": "auth",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.TokenResponse"
                         }
                     }
                 }
             }
         },
-        "/users/logout": {
-            "post": {
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -43,18 +59,18 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Logout for users",
+                "summary": "User Detail",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
             }
         },
-        "/users/signup": {
+        "/users/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -65,12 +81,23 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "SignUp for users",
+                "summary": "Register for users",
+                "parameters": [
+                    {
+                        "description": "User Register",
+                        "name": "register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RegisterInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.userSignUp"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -78,40 +105,79 @@
         }
     },
     "definitions": {
-        "models.userSignUp": {
+        "models.AuthInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RegisterInput": {
             "type": "object",
             "required": [
                 "email",
-                "name",
-                "password"
+                "password",
+                "username"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer",
-                    "example": 1
+                "password": {
+                    "type": "string"
                 },
-                "name": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TokenResponse": {
+            "type": "object",
+            "required": [
+                "token"
+            ],
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 6
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
-        },
-        "JwtAuth(http, Bearer)": {
+        "BearerAuth": {
             "type": "apiKey",
-            "name": "JWT Authorization",
+            "name": "Authorization",
             "in": "header"
         }
     }
